--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -17,8 +17,10 @@ jobs:
         run: cd docs && export NODE_OPTIONS=--openssl-legacy-provider && yarn install && yarn run docs:build
       - name: Install obsutil
         run: cd docs && wget https://obs-community.obs.cn-north-1.myhuaweicloud.com/obsutil/current/obsutil_linux_amd64.tar.gz && tar -zxvf obsutil_linux_amd64.tar.gz && chmod 755 ./obsutil_linux_amd64_5.4.11/obsutil
+      - name: Config ossutil
+        run: cd docs && ./ossutil64 config -i ${{ secrets.OBS_ACCESS_KEY_ID }} -k ${{ secrets.OBS_ACCESS_KEY_SECRET }} -e https://obs.cn-north-4.myhuaweicloud.com
       - name: Upload docs by obsutil
-        run: cd docs && ./obsutil_linux_amd64_5.4.11/obsutil cp -r -f ./docs/.vuepress/dist/ obs://open-read/clickvisual/ -i ${{ secrets.OBS_ACCESS_KEY_ID }} -k ${{ secrets.OBS_ACCESS_KEY_SECRET }}
+        run: cd docs && ./obsutil_linux_amd64_5.4.11/obsutil cp -r -f ./docs/.vuepress/dist/ obs://open-read/clickvisual/
       - name: Install ossutil
         run: cd docs && wget http://gosspublic.alicdn.com/ossutil/1.7.3/ossutil64 && chmod 755 ossutil64
       - name: Config ossutil
