--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Config ossutil
         run: cd docs && ./obsutil_linux_amd64_5.4.11/obsutil config -i ${{ secrets.OBS_ACCESS_KEY_ID }} -k ${{ secrets.OBS_ACCESS_KEY_SECRET }} -e https://obs.cn-north-4.myhuaweicloud.com
       - name: Upload docs by obsutil
-        run: cd docs && ./obsutil_linux_amd64_5.4.11/obsutil cp -r -f ./docs/.vuepress/dist/ obs://open-read/clickvisual/
+        run: cd docs && ./obsutil_linux_amd64_5.4.11/obsutil cp ./docs/.vuepress/dist obs://open-read/clickvisual/dist -f -r -flat
       - name: Install ossutil
         run: cd docs && wget http://gosspublic.alicdn.com/ossutil/1.7.3/ossutil64 && chmod 755 ossutil64
       - name: Config ossutil
