refactor: workflows update

--- a/.github/workflows/apis.yml
+++ b/.github/workflows/apis.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches:
       - 'master'
-#      - 'feature/docker-ci'
+      - 'feature/docker-ci'
 
 jobs:
   updateAPI:
@@ -26,7 +26,7 @@ jobs:
       - name: Config ossutil
         run: ./obsutil_linux_amd64_5.4.11/obsutil config -i ${{ secrets.OBS_ACCESS_KEY_ID }} -k ${{ secrets.OBS_ACCESS_KEY_SECRET }} -e https://obs.cn-north-4.myhuaweicloud.com
       - name: Upload docs by obsutil
-        run: ./obsutil_linux_amd64_5.4.11/obsutil cp ./api/docs/swagger.json obs://open-read/clickvisual/api -f -r -flat
+        run: ./obsutil_linux_amd64_5.4.11/obsutil cp ./api/docs/swagger.json obs://open-read/clickvisual/api/swagger.json -f -r
       - name: Install ossutil
         run: wget http://gosspublic.alicdn.com/ossutil/1.7.3/ossutil64 && chmod 755 ossutil64
       - name: Config ossutil
