--- a/.github/workflows/golangci-lint.yml
+++ b/.github/workflows/golangci-lint.yml
@@ -17,7 +17,7 @@ jobs:
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v3
         with:
-          go-version: ${{ matrix.go-version }}
+          go-version: v1.18
           # Required: the version of golangci-lint is required and must be specified without patch version: we always use the latest patch version.
           version: v1.45.2
 
