--- a/.github/workflows/apis.yml
+++ b/.github/workflows/apis.yml
@@ -24,8 +24,9 @@ jobs:
       - name: Install ReDoc
         run: npm i -g redoc-cli
       - name: Gen HTML
-        run: redoc-cli bundle ./api/docs/swagger.json ./api/docs/index.html
-             mv redoc-static.html ./api/docs/index.html
+        run: |
+          redoc-cli bundle ./api/docs/swagger.json ./api/docs/index.html
+          mv redoc-static.html ./api/docs/index.html
       - name: Install obsutil
         run: wget https://obs-community.obs.cn-north-1.myhuaweicloud.com/obsutil/current/obsutil_linux_amd64.tar.gz && tar -zxvf obsutil_linux_amd64.tar.gz && chmod 755 ./obsutil_linux_amd64_5.4.11/obsutil
       - name: Config ossutil
