--- a/config/default.toml
+++ b/config/default.toml
@@ -24,7 +24,7 @@ host = "0.0.0.0"
 port = 19011
 
 [logger]
-# log level, avaliable level: "debug", "info", "warn", "error", "panic", "fatal"
+# log level, available level: "debug", "info", "warn", "error", "panic", "fatal"
 level = "info"
 name = "clickvisual.log"
 
