--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -9,11 +9,11 @@
 # the `language` matrix defined below to confirm you have the correct set of
 # supported CodeQL languages.
 #
-name: "CodeQL"
+name: "codeQL"
 
 on:
   push:
-    branches: [ 'master', 'feature/docker-ci' ]
+    branches: [ feature/docker-ci ]
   pull_request:
     # The branches below must be a subset of the branches above
     branches: [ master ]
