--- a/.github/workflows/apis.yml
+++ b/.github/workflows/apis.yml
@@ -20,8 +20,7 @@ jobs:
         run: |
           export PATH=$(go env GOPATH)/bin:$PATH
           go version 
-          go install golang.org/x/tools/gopls@latest
-          go install github.com/gotomicro/eapi/cmd/eapi@v0.4.5
+          go install github.com/gotomicro/eapi/cmd/eapi@latest
           eapi --config eapi.yaml
       - name: install redoc
         run: npm i -g redoc-cli
