feat: Log field length greater than 50k is not parsed
Signed-off-by: kl7sn <mex7.0828@gmail.com>

--- a/.github/workflows/apis.yml
+++ b/.github/workflows/apis.yml
@@ -20,7 +20,7 @@ jobs:
         run: |
           export PATH=$(go env GOPATH)/bin:$PATH
           go version 
-          go install github.com/gotomicro/eapi/cmd/eapi@main
+          go install github.com/gotomicro/eapi/cmd/eapi@v0.4.6
           eapi --config eapi.yaml
       - name: install redoc
         run: npm i -g redoc-cli
