--- a/.gitignore
+++ b/.gitignore
@@ -41,7 +41,7 @@ node_modules/
 .umi-production/
 
 ### necessary file
-!api/internal/ui/dist/404.html
+!api/internal/ui/dist/cv.png
 api/internal/ui/dist/
 
 ### file
