skip ui golint check
Signed-off-by: kl7sn <mex7.0828@gmail.com>

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -3,6 +3,8 @@ linters-settings:
     checks:
       - all
       - '-SA1019' # disable the rule SA1019
+  skip-dirs:
+    - ui
 run:
   skip-dirs:
     - dist
