--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -44,6 +44,6 @@ jobs:
           # either 'goreleaser' (default) or 'goreleaser-pro'
           distribution: goreleaser
           version: latest
-          args: release --rm-dist --skip-validate
+          args: release --skip-validate
         env:
           GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
