--- a/.golangci.yml
+++ b/.golangci.yml
@@ -3,9 +3,7 @@ linters-settings:
     checks:
       - all
       - '-SA1019' # disable the rule SA1019
-  skip-dirs:
-    - ui
-run:
-  skip-dirs:
-    - dist
-    - ui
+issues:
+    exclude-dirs:
+      - ui
+      - dist
