--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -3,8 +3,7 @@ on:
   push:
     branches:
       - 'master'
-      - 'feature/docker-ci'
-
+      - 'fix/ci'
 jobs:
   deploy:
     runs-on: ubuntu-latest
