--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -1,9 +1,7 @@
-name: goreleaser
+name: publish-release
 
 on:
   push:
-    branches:
-      - 'feature/docker-ci'
     tags:
       - "v**"
 jobs:
@@ -25,6 +23,7 @@ jobs:
           cd ui
           yarn install --frozen-lockfile
           yarn run build
+          rm -rf ../api/internal/ui/dist
           cp -rf dist ../api/internal/ui
       - name: Set up Go 1.21
         uses: actions/setup-go@v2
@@ -44,6 +43,6 @@ jobs:
           # either 'goreleaser' (default) or 'goreleaser-pro'
           distribution: goreleaser
           version: latest
-          args: release --skip-validate
+          args: release
         env:
           GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
