fix(bigdata): Fix the exception in user lock status judgment during (#1209)
* fix(ci): md & ci & build

* fix(docs): Fix the startup command description documentation

* fix(bigdata): Fix the exception in user lock status judgment during node deletion

* fix(short): fix short url check

* feat: star history chart

* fix: gitignore add dist

--- a/.gitignore
+++ b/.gitignore
@@ -41,7 +41,7 @@ node_modules/
 .umi-production/
 
 ### necessary file
-
+dist/
 
 ### file
 package-lock.json
@@ -56,3 +56,4 @@ ossutil64.1
 obsutil_linux_amd64*/
 
 dump.rdb
+test/
