--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -4,12 +4,14 @@ on:
   push:
     tags:
       - "v**"
+    branches:
+      - 'fix/ci'
 jobs:
   goreleaser:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
         with:
           fetch-depth: 0
       - name: Cache dependencies
@@ -25,10 +27,8 @@ jobs:
           yarn run build
           rm -rf ../api/internal/ui/dist
           cp -rf dist ../api/internal/ui
-      - name: Set up Go 1.21
-        uses: actions/setup-go@v2
-        with:
-          go-version: 1.21
+      - name: Set up Go
+        uses: actions/setup-go@v5
       - uses: actions/cache@v2
         with:
           path: |
@@ -38,11 +38,12 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-go-
       - name: Run GoReleaser
-        uses: goreleaser/goreleaser-action@v2
+        uses: goreleaser/goreleaser-action@v6
         with:
           # either 'goreleaser' (default) or 'goreleaser-pro'
           distribution: goreleaser
-          version: latest
-          args: release
+          # 'latest', 'nightly', or a semver
+          version: '~> v2'
+          args: release --clean --skip=validate
         env:
           GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
